Refactoring gradle build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 group=com.flexhamp
 version=1.0.0-SNAPSHOT
-swaggerCodegen = 2.4.7
 serviceServer=service-server
 
+swaggerCodegen=2.4.7
+springfoxSwagger=2.9.2
+springBootVersion=2.0.4.RELEASE
 
