--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/service/local/repositories/central/content/" }
     }
     dependencies {
-        classpath("io.swagger:swagger-codegen:${swaggerCodegen}")
+        classpath group: 'io.swagger', name: 'swagger-codegen', version: swaggerCodegen
     }
 }
 
@@ -27,54 +27,63 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    compileJava.options.fork = true
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-
-    sourceSets {
-        main {
-            java {
-                srcDir "${serviceServer}/src/main/java"
-            }
-        }
+    dependencies {
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
+        compile group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger
     }
 
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
-
-    artifacts {
-        archives sourcesJar
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
     }
 }
 
 project(serviceServer) {
     dependencies {
-        compile('org.springframework.boot:spring-boot-starter-web:2.0.4.RELEASE')
-        compile('io.springfox:springfox-swagger2:2.9.2')
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
+        compile group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger
     }
-    task generateServer {
-        doLast {
-            def dirName = "${rootDir}/${serviceServer}"
-            file(dirName).list().each {
-                delete "${dirName}/${it}"
+    if (project.hasProperty('generate')) {
+        println "********** Swagger generate **************"
+        task generateServer {
+            doLast {
+                def dirName = "${rootDir}/${serviceServer}"
+                file(dirName).list().each {
+                    delete "${dirName}/${it}"
+                }
+                def config = new CodegenConfigurator()
+                config.setLang("spring")
+                config.setApiPackage("${rootProject.group}.service.api")
+                // Package to be used for the API interfaces
+                config.setModelPackage("${rootProject.group}.service.model")
+                // Package to be used for the API models
+                config.setInputSpec("${rootDir}/api/swagger.yml") // The swagger API file
+                config.setOutputDir("${rootDir}/service-server")
+                // The output directory, user-service-contract/build/user-service-server/
+                config.setAdditionalProperties([
+                        'dateLibrary'  : 'java8', // Date library to use
+                        'useTags'      : 'true',  // Use tags for the naming
+                        'interfaceOnly': 'true'   // Generating the Controller API interface and the models only
+                ])
+                new DefaultGenerator().opts(config.toClientOptInput()).generate() // Executing the generation
+
+                def configFront = new CodegenConfigurator()
+                configFront.setLang("javascript")
+                configFront.setApiPackage("${rootProject.group}.front.api")
+                // Package to be used for the API interfaces
+                configFront.setModelPackage("${rootProject.group}.front.model")
+                // Package to be used for the API models
+                configFront.setInputSpec("${rootDir}/api/swagger.yml") // The swagger API file
+                configFront.setOutputDir("${rootDir}/service-server")
+                // The output directory, user-service-contract/build/user-service-server/
+                configFront.setAdditionalProperties([
+                        'dateLibrary'  : 'java8', // Date library to use
+                        'useTags'      : 'true',  // Use tags for the naming
+                        'interfaceOnly': 'true'   // Generating the Controller API interface and the models only
+                ])
+                new DefaultGenerator().opts(configFront.toClientOptInput()).generate() // Executing the generation
             }
-            def config = new CodegenConfigurator()
-            config.setLang("spring")
-            config.setApiPackage("${rootProject.group}.service.api")
-            // Package to be used for the API interfaces
-            config.setModelPackage("${rootProject.group}.service.model")        // Package to be used for the API models
-            config.setInputSpec("${rootDir}/api/swagger.yml") // The swagger API file
-            config.setOutputDir("${rootDir}/service-server")
-            // The output directory, user-service-contract/build/user-service-server/
-            config.setAdditionalProperties([
-                    'dateLibrary'  : 'java8', // Date library to use
-                    'useTags'      : 'true',  // Use tags for the naming
-                    'interfaceOnly': 'true'   // Generating the Controller API interface and the models only
-            ])
-            new DefaultGenerator().opts(config.toClientOptInput()).generate() // Executing the generation
         }
+        compileJava.dependsOn('generateServer')
     }
-    compileJava.dependsOn('generateServer')
 }
 
