--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -1,40 +1,24 @@
-allprojects {
-    apply plugin: 'maven'
-    apply plugin: 'io.spring.dependency-management'
-}
-
 buildscript {
-    ext {
-        springBootVersion = '2.0.4.RELEASE'
-    }
     repositories {
         maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/content/repositories/central" }
         maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/service/local/repositories/jcenter/content/" }
         maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/service/local/repositories/central/content/" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: springBootVersion
     }
 }
 
-apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+project.buildDir = "${rootProject.buildDir}/${project.name}"
 
 repositories {
     mavenLocal()
-    maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/content/repositories/central" }
-    maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/service/local/repositories/jcenter/content/" }
-    maven { url "http://sbtnexus.ca.sbrf.ru:8081/nexus/service/local/repositories/central/content/" }
 }
 
 dependencies {
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.0'
-
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile project(':service-server') // Generated artifacts
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
+    compile project(':service-server')
 }
-
