--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -19,6 +19,10 @@ repositories {
 }
 
 dependencies {
+    runtime group: 'com.h2database', name: 'h2', version: '1.4.199'
+    runtime group: 'org.springframework.boot', name: 'spring-boot-devtools', version: springBootVersion
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
     compile project(':service-server')
 }
