--- a/frontend/api/package.json
+++ b/frontend/api/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npm run prebuild",
     "prebuild": "cd ../generate && npm link && cd ../api && npm link codegen-skills-api",
-    "build": "webpack"
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-3": "^6.24.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
