--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
     compile project(':service-server')
+
+    testCompile group: 'org.mock-server', name: 'mockserver-netty', version: '5.5.4'
 }
 
 if(project.hasProperty('dev')) {
@@ -40,3 +42,6 @@ if(project.hasProperty('dev')) {
     }
     build.dependsOn buildApi
 }
+
+
+
