--- a/frontend/api/package.json
+++ b/frontend/api/package.json
@@ -16,9 +16,13 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "style-loader": "^0.5.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
