--- a/frontend/api/package.json
+++ b/frontend/api/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
