--- a/frontend/api/package.json
+++ b/frontend/api/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^0.5.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
